--- a/lmcc/DESCRIPTION
+++ b/lmcc/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: lmcc
 Title: Linear Model of Coregionalization with informative Covariates
 Version: 1.0.0
-Author: Melina Ribaud
+Author: Melina Ribaud and Youssef Anzarmou
 Maintainer: Melina Ribaud <melina.ribaud@gmail.com>
 Description: See details for the method at the following preprint e.g.: <https://hal.archives-ouvertes.fr/hal-02936779v3>. 
 URL: https://github.com/melinaR/lmcc
